// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPIntegrationOverview should display data about the integration 1`] = `
<div
  className="full-width"
>
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our 
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value="my little integration"
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value="just a small integration, which is very practical and friendly"
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <BooleanField
          label="Ticket created"
          name="http.triggers.ticket-created"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <BooleanField
          label="Ticket updated"
          name="http.triggers.ticket-updated"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
        <BooleanField
          label="Ticket message created"
          name="http.triggers.ticket-message-created"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </FormGroup>
      <InputField
        error="Only https protocol allowed"
        help={
          <div>
            You can use 
            <code>
              {{ticket.customer.email}}
            </code>
             to pass the email of the ticket customer. See other 
            <a
              href="https://api.gorgias.io/#Customer-object"
              rel="noopener noreferrer"
              target="_blank"
            >
              vars
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="$a"
        placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value="http://httpbin.org/post"
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="POST"
      >
        <option
          key="GET"
          value="GET"
        >
          GET
        </option>
        <option
          key="POST"
          value="POST"
        >
          POST
        </option>
        <option
          key="PUT"
          value="PUT"
        >
          PUT
        </option>
        <option
          key="DELETE"
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Request content type"
        name="http.request_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
        <option
          value="application/x-www-form-urlencoded"
        >
          application/x-www-form-urlencoded
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="header"
          fields={
            Array [
              Object {
                "key": "Authorization",
                "value": "Bearer a57sd4as6d4",
              },
              Object {
                "key": "Foo",
                "value": "bar",
              },
            ]
          }
          name="http.headers"
          onChange={[Function]}
          title="Header"
          validate={[Function]}
        />
      </FormGroup>
      <JSONBody
        form={
          Object {
            "baz": Object {
              "bazile": "bazar",
            },
            "foo": "bar",
          }
        }
        onChange={[Function]}
      />
      <div>
        <Button
          className="mr-2"
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Save changes
        </Button>
        <Button
          className=""
          color="warning"
          onClick={[Function]}
          outline={true}
          tag="button"
          type="button"
        >
          Deactivate integration
        </Button>
        <ConfirmButton
          className="float-right"
          color="secondary"
          confirm={[Function]}
          confirmColor="success"
          content="Are you sure you want to delete this integration?"
          disabled={false}
          loading={false}
          placement="bottom"
          skip={false}
          title="Are you sure?"
          type="button"
        >
          <i
            className="material-icons mr-1 text-danger"
          >
            delete
          </i>
          Delete integration
        </ConfirmButton>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HTTPIntegrationOverview should display data with url-encoded format 1`] = `
<div
  className="full-width"
>
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our 
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value="my little integration"
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value="just a small integration, which is very practical and friendly"
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <BooleanField
          label="Ticket created"
          name="http.triggers.ticket-created"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <BooleanField
          label="Ticket updated"
          name="http.triggers.ticket-updated"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
        <BooleanField
          label="Ticket message created"
          name="http.triggers.ticket-message-created"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </FormGroup>
      <InputField
        error="Only https protocol allowed"
        help={
          <div>
            You can use 
            <code>
              {{ticket.customer.email}}
            </code>
             to pass the email of the ticket customer. See other 
            <a
              href="https://api.gorgias.io/#Customer-object"
              rel="noopener noreferrer"
              target="_blank"
            >
              vars
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="$a"
        placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value="http://httpbin.org/post"
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="POST"
      >
        <option
          key="GET"
          value="GET"
        >
          GET
        </option>
        <option
          key="POST"
          value="POST"
        >
          POST
        </option>
        <option
          key="PUT"
          value="PUT"
        >
          PUT
        </option>
        <option
          key="DELETE"
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Request content type"
        name="http.request_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/x-www-form-urlencoded"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
        <option
          value="application/x-www-form-urlencoded"
        >
          application/x-www-form-urlencoded
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="header"
          fields={
            Array [
              Object {
                "key": "Authorization",
                "value": "Bearer a57sd4as6d4",
              },
              Object {
                "key": "Foo",
                "value": "bar",
              },
            ]
          }
          name="http.headers"
          onChange={[Function]}
          title="Header"
          validate={[Function]}
        />
      </FormGroup>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="field"
          fields={
            Array [
              Object {
                "key": "foo",
                "value": "bar",
              },
              Object {
                "key": "baz",
                "value": "foo",
              },
            ]
          }
          name="http.form"
          onChange={[Function]}
          title="Form field"
        />
      </FormGroup>
      <div>
        <Button
          className="mr-2"
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Save changes
        </Button>
        <Button
          className=""
          color="warning"
          onClick={[Function]}
          outline={true}
          tag="button"
          type="button"
        >
          Deactivate integration
        </Button>
        <ConfirmButton
          className="float-right"
          color="secondary"
          confirm={[Function]}
          confirmColor="success"
          content="Are you sure you want to delete this integration?"
          disabled={false}
          loading={false}
          placement="bottom"
          skip={false}
          title="Are you sure?"
          type="button"
        >
          <i
            className="material-icons mr-1 text-danger"
          >
            delete
          </i>
          Delete integration
        </ConfirmButton>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HTTPIntegrationOverview should display default values because there is no integration (creation) 1`] = `
<div
  className="full-width"
>
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our 
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value=""
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <BooleanField
          label="Ticket created"
          name="http.triggers.ticket-created"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <BooleanField
          label="Ticket updated"
          name="http.triggers.ticket-updated"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <BooleanField
          label="Ticket message created"
          name="http.triggers.ticket-message-created"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
      </FormGroup>
      <InputField
        error={null}
        help={
          <div>
            You can use 
            <code>
              {{ticket.customer.email}}
            </code>
             to pass the email of the ticket customer. See other 
            <a
              href="https://api.gorgias.io/#Customer-object"
              rel="noopener noreferrer"
              target="_blank"
            >
              vars
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="*"
        placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value=""
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="GET"
      >
        <option
          key="GET"
          value="GET"
        >
          GET
        </option>
        <option
          key="POST"
          value="POST"
        >
          POST
        </option>
        <option
          key="PUT"
          value="PUT"
        >
          PUT
        </option>
        <option
          key="DELETE"
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="header"
          fields={Array []}
          name="http.headers"
          onChange={[Function]}
          title="Header"
          validate={[Function]}
        />
      </FormGroup>
      <div>
        <Button
          className="mr-2"
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Add integration
        </Button>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HTTPIntegrationOverview should display loading state because the integration is loading 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;
